--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,16 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    # env_file: ./.env # !!! OVERRIDE IN OTHER places
+      dockerfile: ./docker/development/Dockerfile
+    env_file: ./.env # !!! OVERRIDE IN OTHER places
+    environment:
+      - RAILS_ENV=development
+    command: "bash -c 'rm -f tmp/pids/server.pid && bundle exec rails s -b 0.0.0.0'"
     stdin_open: true
     tty: true
     volumes:
       - .:/app
+      - gems:/usr/local/bundle
     depends_on:
       - "postgres"
       - "redis"
@@ -33,3 +37,4 @@ services:
 volumes:
   postgres:
   redis:
+  gems:
